@@ -1,3 +1,6 @@
+* Tue Jun 23 2020 Adam Yohrling <adam.yohrling@onyxpoint.com> - 8.0.0-0
+- Resolved bug with systemd when simp_generate_types disabled
+
 * Tue May 26 2020 Trevor Vaughan <tvaughan@onyxpoint.com> - 8.0.0-0
 - Add EL8 Support
 - Removed incron support in favor of using systemd path units to run
